[gd_scene load_steps=3 format=3 uid="uid://dh7mk3xbkv8rq"]

[ext_resource type="Script" uid="uid://dmk7upb151cjq" path="res://views/gameplay/score_ui.gd" id="1_score_ui"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_panel"]
bg_color = Color(0.12156863, 0.12156863, 0.17254902, 0.1882353)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.3, 0.3, 0.4, 0.6)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5
shadow_offset = Vector2(0, 3)

[node name="ScoreUI" type="Control"]
layout_mode = 3
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 40.0
offset_top = -150.0
offset_right = 440.0
offset_bottom = 150.0
grow_vertical = 2
script = ExtResource("1_score_ui")

[node name="Panel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="ScoreContainer" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="TitleLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/ScoreContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.8, 1)
theme_override_font_sizes/font_size = 18
text = "SCORE"
horizontal_alignment = 1

[node name="ScoreLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/ScoreContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 48
text = "0"
horizontal_alignment = 1

[node name="ComboContainer" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_constants/separation = 5
alignment = 1

[node name="ComboLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/ComboContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.5, 1, 0.5, 1)
theme_override_font_sizes/font_size = 28
text = "0 COMBO"
horizontal_alignment = 1

[node name="MultiplierLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/ComboContainer"]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_font_sizes/font_size = 32
text = "x1.5"
horizontal_alignment = 1

[node name="SkillMultiplierContainer" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_constants/separation = 5
alignment = 1

[node name="SkillTitleLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/SkillMultiplierContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.8, 1)
theme_override_font_sizes/font_size = 16
text = "SKILL"
horizontal_alignment = 1

[node name="SkillMultiplierLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/SkillMultiplierContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.5, 1, 1)
theme_override_font_sizes/font_size = 36
text = "x2.0"
horizontal_alignment = 1
